libarm64_DATA += %reldir%/libacledit.a
libarm64_DATA += %reldir%/libactiveds.a
libarm64_DATA += %reldir%/libadvapi32.a
libarm64_DATA += %reldir%/libadvpack.a
libarm64_DATA += %reldir%/libappmgmts.a
libarm64_DATA += %reldir%/libappmgr.a
libarm64_DATA += %reldir%/libasycfilt.a
libarm64_DATA += %reldir%/libatl.a
libarm64_DATA += %reldir%/libaudiosrv.a
libarm64_DATA += %reldir%/libauthz.a
libarm64_DATA += %reldir%/libavicap32.a
libarm64_DATA += %reldir%/libavifil32.a
libarm64_DATA += %reldir%/libavrt.a
libarm64_DATA += %reldir%/libazroles.a
libarm64_DATA += %reldir%/libbasesrv.a
libarm64_DATA += %reldir%/libbcrypt.a
libarm64_DATA += %reldir%/libbluetoothapis.a
libarm64_DATA += %reldir%/libbootvid.a
libarm64_DATA += %reldir%/libbrowcli.a
libarm64_DATA += %reldir%/libbrowser.a
libarm64_DATA += %reldir%/libbthci.a
libarm64_DATA += %reldir%/libbthprops.a
libarm64_DATA += %reldir%/libcabinet.a
libarm64_DATA += %reldir%/libcabview.a
libarm64_DATA += %reldir%/libcfgbkend.a
libarm64_DATA += %reldir%/libcfgmgr32.a
libarm64_DATA += %reldir%/libclbcatq.a
libarm64_DATA += %reldir%/libclb.a
libarm64_DATA += %reldir%/libcliconfg.a
libarm64_DATA += %reldir%/libclusapi.a
libarm64_DATA += %reldir%/libcnvfat.a
libarm64_DATA += %reldir%/libcolbact.a
libarm64_DATA += %reldir%/libcomctl32.a
libarm64_DATA += %reldir%/libcomdlg32.a
libarm64_DATA += %reldir%/libcompstui.a
libarm64_DATA += %reldir%/libcomputecore.a
libarm64_DATA += %reldir%/libcomputenetwork.a
libarm64_DATA += %reldir%/libcomputestorage.a
libarm64_DATA += %reldir%/libcomsnap.a
libarm64_DATA += %reldir%/libcomuid.a
libarm64_DATA += %reldir%/libconnect.a
libarm64_DATA += %reldir%/libconsole.a
libarm64_DATA += %reldir%/libcredui.a
libarm64_DATA += %reldir%/libcrypt32.a
libarm64_DATA += %reldir%/libcryptbase.a
libarm64_DATA += %reldir%/libcryptdlg.a
libarm64_DATA += %reldir%/libcryptdll.a
libarm64_DATA += %reldir%/libcryptext.a
libarm64_DATA += %reldir%/libcryptnet.a
libarm64_DATA += %reldir%/libcryptsp.a
libarm64_DATA += %reldir%/libcryptsvc.a
libarm64_DATA += %reldir%/libcryptui.a
libarm64_DATA += %reldir%/libcryptxml.a
libarm64_DATA += %reldir%/libcscapi.a
libarm64_DATA += %reldir%/libd2d1.a
libarm64_DATA += %reldir%/libd3d9.a
libarm64_DATA += %reldir%/libd3d10.a
libarm64_DATA += %reldir%/libd3d11.a
libarm64_DATA += %reldir%/libd3d12.a
libarm64_DATA += %reldir%/libd3dcompiler_47.a
libarm64_DATA += %reldir%/libdavclnt.a
libarm64_DATA += %reldir%/libdavhlpr.a
libarm64_DATA += %reldir%/libdbgeng.a
libarm64_DATA += %reldir%/libdbghelp.a
libarm64_DATA += %reldir%/libdbnetlib.a
libarm64_DATA += %reldir%/libdbnmpntw.a
libarm64_DATA += %reldir%/libdcomp.a
libarm64_DATA += %reldir%/libddraw.a
libarm64_DATA += %reldir%/libdevmgr.a
libarm64_DATA += %reldir%/libdevobj.a
libarm64_DATA += %reldir%/libdevrtl.a
libarm64_DATA += %reldir%/libdfscli.a
libarm64_DATA += %reldir%/libdhcpcsvc.a
libarm64_DATA += %reldir%/libdhcpsapi.a
libarm64_DATA += %reldir%/libdimsroam.a
#libarm64_DATA += %reldir%/libdinput.a    # Handled by custom rule
#libarm64_DATA += %reldir%/libdinput8.a   # Handled by custom rule
libarm64_DATA += %reldir%/libdiskcopy.a
libarm64_DATA += %reldir%/libdismapi.a
libarm64_DATA += %reldir%/libdmutil.a
libarm64_DATA += %reldir%/libdnsapi.a
libarm64_DATA += %reldir%/libdnsrslvr.a
libarm64_DATA += %reldir%/libdrprov.a
libarm64_DATA += %reldir%/libdsauth.a
libarm64_DATA += %reldir%/libdskquota.a
libarm64_DATA += %reldir%/libdsound.a
libarm64_DATA += %reldir%/libdsprop.a
libarm64_DATA += %reldir%/libdsquery.a
libarm64_DATA += %reldir%/libdsrole.a
libarm64_DATA += %reldir%/libdssec.a
libarm64_DATA += %reldir%/libdssenh.a
libarm64_DATA += %reldir%/libdsuiext.a
libarm64_DATA += %reldir%/libduser.a
libarm64_DATA += %reldir%/libdwmapi.a
libarm64_DATA += %reldir%/libdwrite.a
libarm64_DATA += %reldir%/libdxgi.a
libarm64_DATA += %reldir%/libdxva2.a
libarm64_DATA += %reldir%/libeappcfg.a
libarm64_DATA += %reldir%/libeappgnui.a
libarm64_DATA += %reldir%/libeapphost.a
libarm64_DATA += %reldir%/libeappprxy.a
libarm64_DATA += %reldir%/libefsadu.a
libarm64_DATA += %reldir%/libelscore.a
libarm64_DATA += %reldir%/libesentprf.a
libarm64_DATA += %reldir%/libevr.a
libarm64_DATA += %reldir%/libfdeploy.a
libarm64_DATA += %reldir%/libfeclient.a
libarm64_DATA += %reldir%/libfilemgmt.a
libarm64_DATA += %reldir%/libfltlib.a
libarm64_DATA += %reldir%/libfmifs.a
libarm64_DATA += %reldir%/libfontsub.a
libarm64_DATA += %reldir%/libfwpuclnt.a
libarm64_DATA += %reldir%/libgdi32.a
#libarm64_DATA += %reldir%/libgdiplus.a  # Handled by custom rule
libarm64_DATA += %reldir%/libgetuname.a
libarm64_DATA += %reldir%/libglu32.a
libarm64_DATA += %reldir%/libgpedit.a
libarm64_DATA += %reldir%/libhbaapi.a
libarm64_DATA += %reldir%/libhid.a
libarm64_DATA += %reldir%/libhlink.a
libarm64_DATA += %reldir%/libhotplug.a
libarm64_DATA += %reldir%/libhtmlhelp.a
libarm64_DATA += %reldir%/libhtui.a
libarm64_DATA += %reldir%/libiashlpr.a
libarm64_DATA += %reldir%/libiassam.a
libarm64_DATA += %reldir%/libiassvcs.a
libarm64_DATA += %reldir%/libicm32.a
libarm64_DATA += %reldir%/libicmp.a
libarm64_DATA += %reldir%/libicmui.a
libarm64_DATA += %reldir%/libiernonce.a
libarm64_DATA += %reldir%/libimagehlp.a
libarm64_DATA += %reldir%/libimgutil.a
libarm64_DATA += %reldir%/libimm32.a
libarm64_DATA += %reldir%/libinetcomm.a
libarm64_DATA += %reldir%/libinetmib1.a
libarm64_DATA += %reldir%/libinput.a
libarm64_DATA += %reldir%/libinseng.a
libarm64_DATA += %reldir%/libiphlpapi.a
libarm64_DATA += %reldir%/libipnathlp.a
libarm64_DATA += %reldir%/libjsproxy.a
libarm64_DATA += %reldir%/libkdcom.a
#libarm64_DATA += %reldir%/libkernel32.a  # Handled by custom rule
libarm64_DATA += %reldir%/libkeymgr.a
libarm64_DATA += %reldir%/libks.a
libarm64_DATA += %reldir%/libksecdd.a
#libarm64_DATA += %reldir%/libksuser.a    # Handled by custom rule
libarm64_DATA += %reldir%/libktmw32.a
libarm64_DATA += %reldir%/liblinkinfo.a
libarm64_DATA += %reldir%/libloadperf.a
libarm64_DATA += %reldir%/libloghours.a
libarm64_DATA += %reldir%/liblogoncli.a
libarm64_DATA += %reldir%/liblz32.a
libarm64_DATA += %reldir%/libmapi32.a
libarm64_DATA += %reldir%/libmapistub.a
libarm64_DATA += %reldir%/libmcicda.a
libarm64_DATA += %reldir%/libmciseq.a
libarm64_DATA += %reldir%/libmciwave.a
libarm64_DATA += %reldir%/libmdminst.a
libarm64_DATA += %reldir%/libmf3216.a
libarm64_DATA += %reldir%/libmf.a
libarm64_DATA += %reldir%/libmfcore.a
libarm64_DATA += %reldir%/libmfplat.a
libarm64_DATA += %reldir%/libmfplay.a
libarm64_DATA += %reldir%/libmfreadwrite.a
libarm64_DATA += %reldir%/libmfsensorgroup.a
libarm64_DATA += %reldir%/libmgmtapi.a
libarm64_DATA += %reldir%/libmi.a
libarm64_DATA += %reldir%/libmidimap.a
libarm64_DATA += %reldir%/libmincore.a
libarm64_DATA += %reldir%/libmlang.a
libarm64_DATA += %reldir%/libmmdevapi.a
libarm64_DATA += %reldir%/libmodemui.a
libarm64_DATA += %reldir%/libmpr.a
libarm64_DATA += %reldir%/libmsacm32.a
libarm64_DATA += %reldir%/libmsafd.a
libarm64_DATA += %reldir%/libmscat32.a
libarm64_DATA += %reldir%/libmscms.a
libarm64_DATA += %reldir%/libmsctf.a
libarm64_DATA += %reldir%/libmsdadiag.a
libarm64_DATA += %reldir%/libmsdmo.a
libarm64_DATA += %reldir%/libmsdrm.a
libarm64_DATA += %reldir%/libmsi.a
libarm64_DATA += %reldir%/libmsimg32.a
libarm64_DATA += %reldir%/libmsimtf.a
libarm64_DATA += %reldir%/libmsisip.a
libarm64_DATA += %reldir%/libmsls31.a
libarm64_DATA += %reldir%/libmspatcha.a
libarm64_DATA += %reldir%/libmsports.a
libarm64_DATA += %reldir%/libmsrating.a
libarm64_DATA += %reldir%/libmssign32.a
libarm64_DATA += %reldir%/libmssip32.a
libarm64_DATA += %reldir%/libmstask.a
libarm64_DATA += %reldir%/libmsv1_0.a
libarm64_DATA += %reldir%/libmsvfw32.a
libarm64_DATA += %reldir%/libmswsock.a
libarm64_DATA += %reldir%/libmsyuv.a
libarm64_DATA += %reldir%/libmtxdm.a
libarm64_DATA += %reldir%/libmydocs.a
libarm64_DATA += %reldir%/libncobjapi.a
libarm64_DATA += %reldir%/libncrypt.a
libarm64_DATA += %reldir%/libnddeapi.a
libarm64_DATA += %reldir%/libndfapi.a
libarm64_DATA += %reldir%/libndis.a
libarm64_DATA += %reldir%/libnetapi32.a
libarm64_DATA += %reldir%/libnetid.a
libarm64_DATA += %reldir%/libnetio.a
libarm64_DATA += %reldir%/libnetshell.a
libarm64_DATA += %reldir%/libnetutils.a
libarm64_DATA += %reldir%/libnormaliz.a
libarm64_DATA += %reldir%/libntdsapi.a
libarm64_DATA += %reldir%/libntdll.a
libarm64_DATA += %reldir%/libntdllcrt.a
libarm64_DATA += %reldir%/libntquery.a
libarm64_DATA += %reldir%/liboccache.a
libarm64_DATA += %reldir%/libodbc32.a
libarm64_DATA += %reldir%/libodbccp32.a
libarm64_DATA += %reldir%/libole32.a
libarm64_DATA += %reldir%/liboleacc.a
libarm64_DATA += %reldir%/liboleaut32.a
libarm64_DATA += %reldir%/liboledlg.a
libarm64_DATA += %reldir%/libopengl32.a
libarm64_DATA += %reldir%/libosuninst.a
libarm64_DATA += %reldir%/libp2p.a
libarm64_DATA += %reldir%/libp2pgraph.a
libarm64_DATA += %reldir%/libpathcch.a
libarm64_DATA += %reldir%/libpcwum.a
libarm64_DATA += %reldir%/libpdh.a
libarm64_DATA += %reldir%/libperfctrs.a
libarm64_DATA += %reldir%/libperfdisk.a
libarm64_DATA += %reldir%/libperfnet.a
libarm64_DATA += %reldir%/libperfos.a
libarm64_DATA += %reldir%/libperfproc.a
libarm64_DATA += %reldir%/libperfts.a
libarm64_DATA += %reldir%/libphotowiz.a
libarm64_DATA += %reldir%/libpowrprof.a
libarm64_DATA += %reldir%/libprntvpt.a
libarm64_DATA += %reldir%/libpropsys.a
libarm64_DATA += %reldir%/libpsapi.a
libarm64_DATA += %reldir%/libpstorec.a
libarm64_DATA += %reldir%/libquery.a
libarm64_DATA += %reldir%/libqutil.a
libarm64_DATA += %reldir%/libqwave.a
libarm64_DATA += %reldir%/librasadhlp.a
libarm64_DATA += %reldir%/librasauto.a
libarm64_DATA += %reldir%/libraschap.a
libarm64_DATA += %reldir%/librasctrs.a
libarm64_DATA += %reldir%/librasmontr.a
libarm64_DATA += %reldir%/librasmxs.a
libarm64_DATA += %reldir%/librasser.a
libarm64_DATA += %reldir%/librastapi.a
libarm64_DATA += %reldir%/librdpcfgex.a
libarm64_DATA += %reldir%/libregapi.a
libarm64_DATA += %reldir%/libregsvc.a
libarm64_DATA += %reldir%/libresutils.a
libarm64_DATA += %reldir%/libriched20.a
libarm64_DATA += %reldir%/librnr20.a
libarm64_DATA += %reldir%/librpcns4.a
libarm64_DATA += %reldir%/librpcrt4.a
libarm64_DATA += %reldir%/librpcss.a
libarm64_DATA += %reldir%/librsaenh.a
libarm64_DATA += %reldir%/librstrtmgr.a
libarm64_DATA += %reldir%/librtutils.a
libarm64_DATA += %reldir%/libruntimeobject.a
libarm64_DATA += %reldir%/libsamcli.a
libarm64_DATA += %reldir%/libscarddlg.a
libarm64_DATA += %reldir%/libscesrv.a
libarm64_DATA += %reldir%/libschannel.a
libarm64_DATA += %reldir%/libschedcli.a
libarm64_DATA += %reldir%/libscrobj.a
libarm64_DATA += %reldir%/libscrrun.a
libarm64_DATA += %reldir%/libsdhcinst.a
libarm64_DATA += %reldir%/libseclogon.a
libarm64_DATA += %reldir%/libsecur32.a
libarm64_DATA += %reldir%/libsecurity.a
libarm64_DATA += %reldir%/libsensapi.a
libarm64_DATA += %reldir%/libsens.a
libarm64_DATA += %reldir%/libserialui.a
libarm64_DATA += %reldir%/libserwvdrv.a
libarm64_DATA += %reldir%/libsetupapi.a
libarm64_DATA += %reldir%/libshcore.a
#libarm64_DATA += %reldir%/libshell32.a    # Handled by custom rule
libarm64_DATA += %reldir%/libshfolder.a
libarm64_DATA += %reldir%/libshimgvw.a
libarm64_DATA += %reldir%/libshlwapi.a
libarm64_DATA += %reldir%/libshsvcs.a
libarm64_DATA += %reldir%/libsisbkup.a
libarm64_DATA += %reldir%/libslcext.a
libarm64_DATA += %reldir%/libslwga.a
libarm64_DATA += %reldir%/libsnmpapi.a
libarm64_DATA += %reldir%/libsoftpub.a
libarm64_DATA += %reldir%/libsqlsrv32.a
libarm64_DATA += %reldir%/libsrvcli.a
libarm64_DATA += %reldir%/libsrvsvc.a
libarm64_DATA += %reldir%/libsspicli.a
libarm64_DATA += %reldir%/libstreamci.a
libarm64_DATA += %reldir%/libsxs.a
libarm64_DATA += %reldir%/libsynchronization.a
libarm64_DATA += %reldir%/libt2embed.a
libarm64_DATA += %reldir%/libtapi32.a
libarm64_DATA += %reldir%/libtapiperf.a
libarm64_DATA += %reldir%/libtbs.a
libarm64_DATA += %reldir%/libtdh.a
libarm64_DATA += %reldir%/libtraffic.a
libarm64_DATA += %reldir%/libtsbyuv.a
libarm64_DATA += %reldir%/libtxfw32.a
libarm64_DATA += %reldir%/libumdmxfrm.a
libarm64_DATA += %reldir%/libunimdmat.a
libarm64_DATA += %reldir%/libuniplat.a
libarm64_DATA += %reldir%/libupnp.a
libarm64_DATA += %reldir%/liburl.a
libarm64_DATA += %reldir%/liburlmon.a
libarm64_DATA += %reldir%/libuser32.a
libarm64_DATA += %reldir%/libuserenv.a
libarm64_DATA += %reldir%/libusp10.a
libarm64_DATA += %reldir%/libutildll.a
libarm64_DATA += %reldir%/libuxtheme.a
libarm64_DATA += %reldir%/libversion.a
libarm64_DATA += %reldir%/libvirtdisk.a
libarm64_DATA += %reldir%/libvfw32.a
libarm64_DATA += %reldir%/libw32time.a
libarm64_DATA += %reldir%/libw32topl.a
libarm64_DATA += %reldir%/libwdigest.a
libarm64_DATA += %reldir%/libwebauthn.a
libarm64_DATA += %reldir%/libwebclnt.a
libarm64_DATA += %reldir%/libwebsocket.a
libarm64_DATA += %reldir%/libwecapi.a
libarm64_DATA += %reldir%/libwevtapi.a
libarm64_DATA += %reldir%/libwiashext.a
libarm64_DATA += %reldir%/libwimgapi.a
libarm64_DATA += %reldir%/libwindowsapp.a
libarm64_DATA += %reldir%/libwinhttp.a
libarm64_DATA += %reldir%/libwininet.a
libarm64_DATA += %reldir%/libwinmm.a
libarm64_DATA += %reldir%/libwinrnr.a
libarm64_DATA += %reldir%/libwinscard.a
libarm64_DATA += %reldir%/libwinspool.a
libarm64_DATA += %reldir%/libwinsrv.a
libarm64_DATA += %reldir%/libwinusb.a
libarm64_DATA += %reldir%/libwkscli.a
libarm64_DATA += %reldir%/libwkssvc.a
libarm64_DATA += %reldir%/libwlanapi.a
libarm64_DATA += %reldir%/libwlanui.a
libarm64_DATA += %reldir%/libwlanutil.a
libarm64_DATA += %reldir%/libwldap32.a
libarm64_DATA += %reldir%/libwmi.a
libarm64_DATA += %reldir%/libwmiprop.a
libarm64_DATA += %reldir%/libwofutil.a
libarm64_DATA += %reldir%/libwpd_ci.a
#libarm64_DATA += %reldir%/libws2_32.a      # Handled by custom rule
libarm64_DATA += %reldir%/libws2help.a
libarm64_DATA += %reldir%/libwscapi.a
libarm64_DATA += %reldir%/libwscsvc.a
libarm64_DATA += %reldir%/libwshbth.a
libarm64_DATA += %reldir%/libwslapi.a
libarm64_DATA += %reldir%/libwsock32.a
libarm64_DATA += %reldir%/libwtsapi32.a
libarm64_DATA += %reldir%/libxaudio2_8.a
libarm64_DATA += %reldir%/libxinput1_4.a
libarm64_DATA += %reldir%/libxmllite.a
